After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745369 - Ugly error message when file not found
Ugly error message when file not found
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Navigation
3.15.x
Other Linux
: Normal minor
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-01 15:11 UTC by Muhammet Kara
Modified: 2015-03-01 18:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
File not found error message (15.56 KB, image/png)
2015-03-01 15:11 UTC, Muhammet Kara
  Details
Patch for fixing the error message assignment (1.18 KB, patch)
2015-03-01 15:24 UTC, Muhammet Kara
none Details | Review

Description Muhammet Kara 2015-03-01 15:11:08 UTC
Created attachment 298213 [details]
File not found error message

When we try to navigate to a nonexistent location (local), nautilus shows an error dialog informing the user about the issue. But it is wrongly displayed as "unhandled error" although it is not.

I think it is caused by unintentionally setting the error title to the actual message, and leaving the message detail variable as NULL.

----------
How to reproduce:

- Open nautilus
- Select "Enter Location..." from the menu
- Enter a non-existent local path

----------
Comment 1 Muhammet Kara 2015-03-01 15:24:09 UTC
Created attachment 298214 [details] [review]
Patch for fixing the error message assignment
Comment 2 Carlos Soriano 2015-03-01 18:41:23 UTC
Good catch and good commit message, so happy with this patch =)

Thanks for the work!