nautilus-window-slot: Fixed ugly error message

Fixed assignment of error message detail to fix
the ugly error message displayed when trying to
navigate to a nonexistent location in the local
file system.

https://bugzilla.gnome.org/show_bug.cgi?id=745369